--- a/index.html
+++ b/index.html
@@ -2,13 +2,69 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Quark Report Links</title>
+  <title>Quark Report Viewer</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+      height: 100vh;
+    }
+
+    /* Sidebar */
+    .sidebar {
+      width: 250px;
+      background-color: #2c3e50;
+      color: white;
+      padding: 20px;
+      box-sizing: border-box;
+    }
+
+    .sidebar h2 {
+      font-size: 20px;
+      margin-bottom: 15px;
+    }
+
+    .sidebar a {
+      display: block;
+      color: white;
+      text-decoration: none;
+      margin: 10px 0;
+      padding: 8px;
+      border-radius: 4px;
+    }
+
+    .sidebar a:hover {
+      background-color: #34495e;
+    }
+
+    /* Main content */
+    .main {
+      flex-grow: 1;
+      border: none;
+    }
+
+    iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+  </style>
 </head>
 <body>
-  <h1>Quark Reports</h1>
-  <ul>
-    <li><a href="https://jerrytasi.github.io/quarkReportWeb/quarkReportOvaa.html">Quark Report of ovaa.apk</a></li>
-    <li><a href="https://jerrytasi.github.io/quarkReportWeb/quarkReportDvba.html">Quark Report of dvba.apk</a></li>
-  </ul>
+
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <h2>Quark Reports</h2>
+    <a href="home.html" target="reportFrame">Home</a>
+    <a href="https://jerrytasi.github.io/quarkReportWeb/quarkReportOvaa.html" target="reportFrame">Quark Report of ovaa.apk</a>
+    <a href="https://jerrytasi.github.io/quarkReportWeb/quarkReportDvba.html" target="reportFrame">Quark Report of dvba.apk</a>
+  </div>
+
+  <!-- Main iframe -->
+  <div class="main">
+    <iframe name="reportFrame" src="home.html"></iframe>
+  </div>
+
 </body>
 </html>
